# acapi

./: .gitignore  Dockerfile  README.md  acapi-k8s.yml  build.cmd  getfaadb.sh  k6-load-test.js  nginx-no-tls.conf  nginx.conf  render.yaml  run.sh  test.sh
.github/workflows/: docker-image.yml  hadolint.yml
app/: app.py  init.sh  main.py  prestart.sh  pyproject.toml  pytest.sh  requirements.txt  test_main.py
html/: index.html
