[tool.poetry]
name = "acapi"
version = "0.2.1"
description = "acapi Web API"
authors = ["Evgeny Varnavskiy <varnavruz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = "^0.30"
gunicorn = "^22"
python-multipart = "^0.0"
aiofiles = "^24.1"
SQLAlchemy = "^2.0"
httpx = "^0.27"

[tool.poetry.dev-dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
