[tool.poetry]
name = "acapi"
version = "0.3.0"
description = "acapi Web API"
authors = ["Evgeny Varnavskiy <varnavruz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115"
uvicorn = "^0.34"
gunicorn = "^23"
python-multipart = "^0.0"
aiofiles = "^24.1"
SQLAlchemy = "^2.0"
httpx = "^0.28"

[tool.poetry.dev-dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
